@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 *******************************************************************************
 post release patches:
 
+2000-03-17    <layer@HOBART>
+
+	* localfidev.el: fix C mode indentation!
+
 1999-11-29  Kevin Layer  <layer@ultra>
 
 	* fi-lep.el: deal with warning
